Resolve font layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
 @import 'tailwindcss/tailwind.css';
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: var(--font-inter);
 }
 
 .ReactModal__Overlay {
